<resources>
    <string name="app_name">XiYouSearch</string>
    <string name="user_login">用户登录/LOGIN</string>
    <string name="user_name">请输入学号</string>
    <string name="user_password">请输入密码</string>
    <string name="checkCode">请输入验证码</string>
    <string name="wrongCheckCode">验证码错误</string>
    <string name="home_page">首页</string>
    <string name="personal_information">个人信息</string>
    <string name="change_password">修改密码</string>
    <string name="personal_classes">个人课表</string>
    <string name="search_grades">成绩查询</string>
    <string name="school_plan">培养计划</string>
    <string name="make_up_exam">补考查询</string>
    <string name="grades">学年: </string>
    <string name="semester">学期: </string>
    <string name="search">查询</string>
    <string name="class_name">课程名称</string>
    <string name="class_type">课程性质</string>
    <string name="credit">学分</string>
    <string name="grade_point">绩点</string>
    <string name="marks">成绩</string>
    <string name="introduce">西安邮电大学（Xi`an University of Posts  Telecommunications）简称“西邮”，位于古都西安，创建于1950年，是国家工业和信息化部与陕西省政府共建高校，国家布点设立并重点建设的几所邮电高校之一。1959年3月经国务院批准开始本科教育并定名为西安邮电学院，成为邮电部、信息产业部（现工业和信息化部）直属重点高校；2000年划归陕西省，实行中央与地方共建，以陕西省管理为主的管理体制。是一所以工学为主，以信息科学技术为鲜明特色，工、理、管、经、文、法、艺多学科协调发展的教学研究型大学，学校是中国人民解放军后备军官选拔培养基地、陕西省博士后创新基地、全军首批试办边防军人子女预科班的高校。
学校是陕西高水平大学建设高校、教育部“卓越工程师教育培养计划”实施高校、中国人民解放军后备军官选拔培养基地、全国首批试办边防军人子女预科班的高校、西北地区唯一承担亚太电信组织和东盟培训任务的高校。理工类
截至2017年6月，学校占地1500余亩，建有长安、雁塔两个校区，校舍面积73余万平方米，仪器设备总值2.55亿元，图书馆藏书近167万余册。有全日制在校生18000余人。有11个一级学科硕士学位授权点；47个二级学科硕士学位授权点；5个工程硕士授权领域、1个会计专业学位授权点和1个工商管理硕士专业学位授权点，43个本科专业，8个省部级重点学科，6个部级重点实验室，4个省级重点研究中心</string>
</resources>