<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".Views.Activities.MainActivity">

   <ImageView
       android:layout_width="200dp"
       android:layout_height="200dp"
       android:scaleType="centerCrop"
       android:src="@mipmap/iv_xiyoulogo"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="20dp"
       />

    <EditText
        android:id="@+id/et_username"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_user"
        android:drawablePadding="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        android:hint="@string/user_name"
        android:background="@drawable/bg_edittext"
        />

    <EditText
        android:id="@+id/et_userpassword"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_password"
        android:drawablePadding="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        android:hint="@string/user_password"
        android:background="@drawable/bg_edittext"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/et_checkcode"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_checkcode"
            android:drawablePadding="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/textColor"
            android:textSize="12sp"
            android:hint="@string/checkCode"
            android:background="@drawable/bg_edittext"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/iv_checkcode"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_erro"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_login"
        android:textSize="16sp"
        android:text="@string/user_login"
        android:gravity="center"
        android:textColor="#fff"
        android:background="@drawable/bg_login"
        android:padding="10dp"
        android:layout_margin="16dp"
        />



</LinearLayout>
